--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Unica+One');
+
 
 body {
-  background-image:url("../img/4.jpg"), linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7));
+  background-image:url("./assets/img/4.jpg"), linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7));
   background-blend-mode: overlay;
   background-repeat: no-repeat;
   background-size: 100% 100%;
