--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,7 +12,12 @@ body {
 }
 
 
-html {
+html { 
+  width: 100%;
+  height: 100%;
+}
+
+#root, #root>div {
   width: 100%;
   height: 100%;
 }
@@ -23,9 +28,20 @@ html {
   font-family: 'Open Sans', sans-serif;
 }
 
+
+.flex-container {
+  display: flex; /* or inline-flex */
+  /* border: 1px solid white; */
+  flex-direction: row-reverse;
+  height: 100%;
+  width: 100%;
+  margin: auto;
+  align-items: center;
+  justify-content: center;
+}
+
 h1 {
   font-family: 'Unica One', cursive;
-/*  font-family: 'Open Sans', sans-serif;*/
   font-weight: 600;
   color: white;
   font-size: 100px;
@@ -36,7 +52,6 @@ h1 {
 h3 {
   margin: 10px;
   line-height: 50px;
-/*  font-family: 'Jura', sans-serif;*/
   font-family: 'Unica One', cursive;
   font-weight: 400;
   color: white;
@@ -50,28 +65,21 @@ h3 {
 }
 
 .tagline-container {
-/*  border: 1px solid blue;*/
+  /* border: 1px solid blue; */
+  width:92%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
   text-align: center;
-  vertical-align: middle;
-  position: absolute;
-  margin: auto;
-  top: 0;
-/*  right: 0;*/
-  bottom: 0;
-/*  left: 0;*/
-  float: left;
-  width: 700px;
-  height: 400px;
 }
 
 .container-content {
-/*  border: 1px solid red;*/
-  position: absolute;
-  top: 50%; 
-  left: 50%;
-  transform: translate(-50%,-50%);
-  width: 700px;
-  height: 400px;
+  /* border: 1px solid purple; */
+  height: 50%;
+  width: 60%;
+  text-align:center;
+  overflow-wrap: inherit;
 }
 
 .hero-button {  
@@ -109,25 +117,19 @@ h3 {
 
 
 .skills-container {
-
-/*  border: 1px solid red;*/
-  float: right;
-  right: 60px;
-  overflow: auto;
-  height: 100%;
-  width: 100px;
-  top: 50%;
-  bottom: 50%;
-  
-  /* FLEX STUFF */
+  /* border: 1px solid red; */
+  width:8%;
+  height: 50%;
   display: flex;
   justify-content: center;
   flex-direction: column;
+  text-align: center;
   
 }
 
 .item-container{
 /*  border: 1px solid blue;*/
+  margin: 20px;
 }
 
 .item-text {
@@ -138,12 +140,9 @@ h3 {
 
 .svg-circle {
   display: block; 
-  margin: 10px;
+  margin: auto;
   transition: all .2s ease-in-out;
   cursor: pointer;
-  margin-top: 10px;
-  margin-bottom: 40px;
-  margin-left: 35px;
 }
 
 #tech {
