--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Unica+One');
 
 
-body {
+.landing {
   background-image:url("./assets/img/4.jpg"), linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7));
   background-blend-mode: overlay;
   background-repeat: no-repeat;
@@ -10,7 +10,6 @@ body {
   width: 100%;
   height: 100%;
 }
-
 
 html { 
   width: 100%;
@@ -22,6 +21,14 @@ html {
   height: 100%;
 }
 
+body {
+  width: 100%;
+  height: 100%;
+}
+
+.page {
+  color: black;
+}
 
 .text {
   color: white;
@@ -40,7 +47,7 @@ html {
   justify-content: center;
 }
 
-h1 {
+h1.landing-h1 {
   font-family: 'Unica One', cursive;
   font-weight: 600;
   color: white;
@@ -49,7 +56,7 @@ h1 {
   margin: 10px;
 }
 
-h3 {
+h3.landing-h3 {
   margin: 10px;
   line-height: 50px;
   font-family: 'Unica One', cursive;
